--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,13 @@ jobs:
   install-dependencies:
     runs-on: ubuntu-latest
     steps:
-      with:
-        node-version: '18'
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18'
       - run: npm install
   lint:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - run: npm run lint
