--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: main
 run-name: ${{ github.actor }} is pushing new code
 on: [push]
 jobs:
-  install-dependencies:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
