--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: main
 run-name: ${{ github.actor }} is pushing new code
 on: [push]
 jobs:
-  lint:
+  lint-and-tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -11,3 +11,4 @@ jobs:
           node-version: '18'
       - run: npm install
       - run: npm run lint
+      - run: npm run coverage
