--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,16 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '18'
-      - run: npm install
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Linting
       - run: npm run lint
-      - run: npm run coverage
+
+      - name: Test and Coverage
+        run: npm run coverage
+
+      - name: Update Coverage Badge
+        if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
+        uses: we-cli/coverage-badge-action@main
